# RINO

./: .gitignore  README.md
baselines/mpmv2/: .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
baselines/mpmv2/docker/: Dockerfile
baselines/mpmv2/gridtools/: depth_sweep.py  jointembedders.py  mask_sweep.py  pretrain.py  wandb_sync
baselines/mpmv2/hydra_cli/: environment.yaml  wrapper.py
baselines/mpmv2/mltools/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
baselines/mpmv2/mltools/.gitlab/: .ci-build.yaml  .ci-cleanup.yaml  .ci-coverage.yaml  .ci-test.yaml
baselines/mpmv2/mltools/docker/: Dockerfile
baselines/mpmv2/mltools/mltools/: __init__.py  attention.py  bayesian.py  clustering.py  cnns.py  deepset.py  diffusion.py  flows.py  hydra_utils.py  lightning_utils.py  loss.py  mlp.py  modules.py  numpy_utils.py  optimisers.py  plotting.py  schedulers.py  torch_utils.py  transformers.py  utils.py
baselines/mpmv2/notebooks/: check_data.py  check_diff.py  check_edges.py  check_kmeans.py  check_load.py  check_pp.py  check_stream.py  check_vqvae.py  get_preprocessor.py
baselines/mpmv2/plotting/: acc_vs_njets.py  plot_reco.py  plot_sweep.py  rocs.py  sic_vs_njets.py  trk_perf.py  vtx_perf.py
baselines/mpmv2/resources/: cst_quant.joblib  jet_quant.joblib  kmeans_16384.pkl  kmeans_3.pkl  kmeans_7.pkl  preprocessor_all.joblib  preprocessor_ptetaphi.joblib  vqvae.pkl
baselines/mpmv2/scripts/: combine_jetclass.py  export.py  export_backbone.py  make_jetclass.py  make_shlomi.py  mpm_inference.py  train.py
baselines/mpmv2/src/: callbacks.py  plotting.py
baselines/mpmv2/src/datamodules/: hdf.py  (+7 more)
(+214 files in other folders)
